add header and sidebar menu in main layout

--- a/crm-frontend/src/scss/global.scss
+++ b/crm-frontend/src/scss/global.scss
@@ -1,5 +1,17 @@
+*,
+:before,
+:after {
+  box-sizing: border-box;
+}
+
 body {
+  font-family: 'Roboto', sans-serif;
   font-size: $main-font;
   margin: 0;
   padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: $black;
 }
